[ Key ]
* = Change or information
+ = Addition
! = Bug Fix

[ July 30, 2004 - 0.12.0 ]
    + Added preprocessing via XML processing information tags. Available tags
      are: <?if <exp> ?>, <?elseif <exp> ?>, <?else ?> and <?endif ?>. The
      current expression parser is very basic, but will be replaced with a more
      capable parser over time. Current operators available are: =, !=, <, >,
      <=, >=. Current test variables available: OS, RuntimeVersion, RuntimeMajor,
      RuntimeMinor, RuntimeRevision.

[ July 27, 2004 - 0.11.4 ]
    + Added 'useRegex' attribute to the Match tag. Matches can now use regular
      expressions to match filenames.
    + Added the 'assemblyName' attribute to the Project tag. Projects can now
      set their output assembly name.
    ! Fixed several bugs in the way that Project tags inheirt their parent
      Solutions configuration options. This operation should now work fully as
      intended.
    ! Due to some wierdness, Project Guid's are now stored as part of the Project
      node and created at parse time.

[ May 11, 2004 - 0.11.3 ]
    ! Fixed a bug where I was writing the wrong property name for a projects root
      namespace.
    ! Removed a DEBUG statement I had left in the code in 0.11.2.
    ! Fixed a bug in the VS2002 writer which caused the version variables to not
      be overriden correctly.
    + Added the rootNamespace property to the <Project> element, allowing you to
      specify the root namespace.
    * /target and /clean are now mutually exclusive command line switches, and
      they both now take the all option. In the case of /target all, all build
      file for all targets will be created. In the case of /clean all, the user
      will be prompted to make sure they want to do it, and if so, will clean
      all build files for all targets.

[ April 22, 2004 - 0.11.2 ]
    ! Fixed a bug with the /file command-line operator. Was using the unresolved