@@ -68,7 +68,7 @@ using System.Security.Permissions;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("0.12.0")]
+[assembly: AssemblyVersion("0.12.1")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
